# licitador

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt
src/: main.py
src/logging/: formatter.py  logger_handler.py
src/models/entities/: __init__.py  bid_entity.py  company_entity.py  document_entity.py
src/models/settings/: connection.py  create_schema.py
