[project]
name = "licitador"
version = "0.1.0"
description = ""
authors = [
    {name = "Murilo Seidenstucker",email = "murilocampos.004@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "typer (>=0.20.0,<0.21.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "sqlalchemy-utils (>=0.42.0,<0.43.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.scripts]
licitador = "src.main:app"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^7.0.0"
isort = "^7.0.0"
taskipy = "^1.14.1"
black = "^25.11.0"
pylint = "^4.0.3"
pre-commit = "^4.4.0"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
lint = "black --check --diff . && isort --check --diff ."
pre_test = "task lint"
test = "pytest -s -x --cov=src -vv"
post_test = "coverage html"
